--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -46,15 +46,18 @@ jobs:
     needs: build
 
     steps:
-    
+    - name: Get tag name
+        id: get_tag_name
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/heads\//}
+
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
+        tag_name:  ${{ steps.get_tag_name.outputs.VERSION }} # ${{ github.ref }}
+        release_name: Release ${{ steps.get_tag_name.outputs.VERSION }} # ${{ github.ref }}
         draft: false
         prerelease: false
     
