--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,7 +19,10 @@
 
 name: Build and Release Binary
 
-on: [ push, pull_request ]
+# on: [ push, pull_request ]
+
+## Trigger on Release
+on: release
 
 jobs:
 
@@ -39,34 +42,37 @@ jobs:
         name: project-binaries
         path: releases
 
-  create_release:
-    
-    if: contains(github.ref, 'v')
-    runs-on: ubuntu-latest
-    needs: build
 
-    steps:
-    - name: Get tag name
-      id: get_tag_name
-      run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/heads\//}
 
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-      with:
-        tag_name:  ${{ steps.get_tag_name.outputs.VERSION }} # ${{ github.ref }}
-        release_name: Release ${{ steps.get_tag_name.outputs.VERSION }} # ${{ github.ref }}
-        draft: false
-        prerelease: false
+
+  # create_release:
     
-    outputs:
-      upload_url: ${{ steps.create_release.outputs.upload_url }}
+  #   if: contains(github.ref, 'v')
+  #   runs-on: ubuntu-latest
+  #   needs: build
+
+  #   steps:
+  #   - name: Get tag name
+  #     id: get_tag_name
+  #     run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/heads\//}
+
+  #   - name: Create Release
+  #     id: create_release
+  #     uses: actions/create-release@v1
+  #     env:
+  #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+  #     with:
+  #       tag_name:  ${{ steps.get_tag_name.outputs.VERSION }} # ${{ github.ref }}
+  #       release_name: Release ${{ steps.get_tag_name.outputs.VERSION }} # ${{ github.ref }}
+  #       draft: false
+  #       prerelease: false
+    
+  #   outputs:
+  #     upload_url: ${{ steps.create_release.outputs.upload_url }}
 
   upload_assets:
 
-    if: contains(github.ref, 'v')
+    # if: contains(github.ref, 'v')
     runs-on: ubuntu-latest
     needs: create_release
 
@@ -75,18 +81,37 @@ jobs:
     #     os: [darwin_amd64, linux_amd64, windows_386, windows_amd64]
   
     steps:
-    
+
     - name: Download built project binaries
       uses: actions/download-artifact@v2
       with:
         name: project-binaries
 
+    - name: Get release
+      id: get_release
+      uses: bruceadams/get-release@v1.2.2
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
+
+    ## use with create_release step 
+    # - name: Upload Release Asset ${{ matrix.os }}
+    #   uses: actions/upload-release-asset@v1
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #   with:
+    #     upload_url: ${{ needs.create_release.outputs.upload_url }} 
+    #     asset_path: ./cert-monitor_linux_amd64.zip
+    #     asset_name: cert-monitor_linux_amd64.zip
+    #     asset_content_type: application/zip
+
+
+    ## Use with get_release
     - name: Upload Release Asset ${{ matrix.os }}
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        upload_url: ${{ needs.create_release.outputs.upload_url }} 
+        upload_url: ${{ steps.get_release.outputs.upload_url }} 
         asset_path: ./cert-monitor_linux_amd64.zip
         asset_name: cert-monitor_linux_amd64.zip
         asset_content_type: application/zip
