--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -77,6 +77,7 @@ jobs:
     # if: contains(github.ref, 'v')
     runs-on: ubuntu-latest
     # needs: create_release
+    needs: build
 
     # strategy:
     #   matrix:
