--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,120 +1,41 @@
-# .github/workflows/release.yaml
-
-# on: release
-# name: Build Release
-# jobs:
-#   release-linux-amd64:
-#     name: release linux/amd64
-#     runs-on: ubuntu-latest
-#     steps:
-#     - uses: actions/checkout@master
-#     - name: compile and release
-#       uses: ngs/go-release.action@v1.0.1
-#       env:
-#         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#         GOARCH: amd64
-#         GOOS: linux
-#         EXTRA_FILES: "README.md"
+name: goreleaser
 
 
-name: Build and Release Binary
+## Ref: https://goreleaser.com/ci/actions/#github-actions
+on:
+  # push: 
+  #   tags: 
+  #     - 'v*'
+  create: 
+    tags: 
+      - 'v*'
 
-# on: [ push, pull_request ]
-
-## Trigger on Release
-on: 
-  release:
-    types: [created]
+permissions:
+  contents: write
 
 jobs:
-
-  build:
-
-    if: contains(github.ref, 'v')
+  goreleaser:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-    - name: Build the binary
-      run: make build-zip
-
-    - name: Archive production artifacts
-      uses: actions/upload-artifact@v2
-      with:
-        name: project-binaries
-        path: releases
-
-
-
-
-  # create_release:
-    
-  #   if: contains(github.ref, 'v')
-  #   runs-on: ubuntu-latest
-  #   needs: build
-
-  #   steps:
-  #   - name: Get tag name
-  #     id: get_tag_name
-  #     run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/heads\//}
-
-  #   - name: Create Release
-  #     id: create_release
-  #     uses: actions/create-release@v1
-  #     env:
-  #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-  #     with:
-  #       tag_name:  ${{ steps.get_tag_name.outputs.VERSION }} # ${{ github.ref }}
-  #       release_name: Release ${{ steps.get_tag_name.outputs.VERSION }} # ${{ github.ref }}
-  #       draft: false
-  #       prerelease: false
-    
-  #   outputs:
-  #     upload_url: ${{ steps.create_release.outputs.upload_url }}
-
-  upload_assets:
-
-    # if: contains(github.ref, 'v')
-    runs-on: ubuntu-latest
-    # needs: create_release
-    needs: build
-
-    # strategy:
-    #   matrix:
-    #     os: [darwin_amd64, linux_amd64, windows_386, windows_amd64]
-  
-    steps:
-
-    - name: Download built project binaries
-      uses: actions/download-artifact@v2
-      with:
-        name: project-binaries
-
-    - name: Get release
-      id: get_release
-      uses: bruceadams/get-release@v1.2.2
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
-
-    ## use with create_release step 
-    # - name: Upload Release Asset ${{ matrix.os }}
-    #   uses: actions/upload-release-asset@v1
-    #   env:
-    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #   with:
-    #     upload_url: ${{ needs.create_release.outputs.upload_url }} 
-    #     asset_path: ./cert-monitor_linux_amd64.zip
-    #     asset_name: cert-monitor_linux_amd64.zip
-    #     asset_content_type: application/zip
-
-
-    ## Use with get_release
-    - name: Upload Release Asset ${{ matrix.os }}
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.get_release.outputs.upload_url }} 
-        asset_path: ./cert-monitor_linux_amd64.zip
-        asset_name: cert-monitor_linux_amd64.zip
-        asset_content_type: application/zip
+      -
+        name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      -
+        name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.17
+      -
+        name: Run GoReleaser
+        uses: goreleaser/goreleaser-action@v2
+        with:
+          # either 'goreleaser' (default) or 'goreleaser-pro'
+          distribution: goreleaser
+          version: latest
+          args: release --rm-dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # Your GoReleaser Pro key, if you are using the 'goreleaser-pro' distribution
+          # GORELEASER_KEY: ${{ secrets.GORELEASER_KEY }}
