feat: create cli commands
- fetch: saml, tls, tcp
- refactoring code

wip: migrate to cobra cli

wip: fetch tls

feat: saml and tcp fetch + refactoring

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -21,7 +21,7 @@ builds:
       # - 386
     ldflags:
       ## auto inject commit and version at build time
-      - -X main.GitCommit={{ .ShortCommit }} -X main.Version={{ .Version }} 
+      - -X github.com/vdbulcke/cert-monitor/cmd.GitCommit={{ .ShortCommit }} -X github.com/vdbulcke/cert-monitor/cmd.Version={{ .Version }} 
 archives:
   - 
     replacements:
