--- a/example/config.yaml
+++ b/example/config.yaml
@@ -80,6 +80,23 @@ remote_saml_metadata_endpoints:
 - url: "https://idp.iamfas.belgium.be/EidasNode/ConnectorMetadata"
 
 
+##
+## Remote Json Web Keys URL Endpoints
+##
+## Since Version 1.1.0
+### List of 'RemoteJWKEndpoint'
+###
+### RemoteJWKEndpoints:
+###     ## Url pointing to jwk_uri
+###     ## -  https://idp.iamfas.belgium.be/fas/oauth2/connect/jwk_uri
+###     url: (required)
+###     ## Filter on 'alg'
+###     alg: (optional)
+###     ## Filter on 'kid'
+###     kid: (optional)
+remote_jwk_endpoints:
+- url: https://idp.iamfas.belgium.be/fas/oauth2/connect/jwk_uri
+  alg: RS256
 
 ##
 ## CertificatesDir
