--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -47,6 +47,8 @@ checksum:
   name_template: 'checksums.txt'
 snapshot:
   name_template: "{{ incpatch .Version }}-next"
+
+
 changelog:
   sort: asc
   filters:
@@ -56,6 +58,22 @@ changelog:
       - '^test:'
       - '^typo:'
       - '^ignore:'
+  # Group commits messages by given regex and title.
+  # Order value defines the order of the groups.
+  # Proving no regex means all commits will be grouped under the default group.
+  # Groups are disabled when using github-native, as it already groups things by itself.
+  #
+  # Default is no groups.
+  groups:
+    - title: Features
+      regexp: "^.*feat[(\\w)]*:+.*$"
+      order: 0
+    - title: 'Bug fixes'
+      regexp: "^.*fix[(\\w)]*:+.*$"
+      order: 1
+    - title: Others
+      order: 999
+
 
 release:
   ## set github header and footer
