--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -82,7 +82,7 @@ release:
 
     repo: https://hub.docker.com/repository/docker/vdbulcke/cert-monitor/general
     ```bash
-    docker pull vdbulcke/cert-monitor:1.1.0
+    docker pull vdbulcke/cert-monitor:{{ .Tag }}
     ```
 
   # # Footer template for the release body.
