--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -2,6 +2,7 @@ name: goreleaser
 
 
 ## Ref: https://goreleaser.com/ci/actions/#github-actions
+## Ref: https://docs.github.com/en/packages/managing-github-packages-using-github-actions-workflows/publishing-and-installing-a-package-with-github-actions
 on:
   # push: 
   #   tags: 
@@ -12,6 +13,12 @@ on:
 
 permissions:
   contents: write
+  ## for ghcr.io registry 
+  packages: write
+
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 
 jobs:
   goreleaser:
@@ -28,11 +35,18 @@ jobs:
         with:
           go-version: 1.18
       
-      - name: dockerhub-login
-        uses: docker/login-action@v1
+      # - name: dockerhub-login
+      #   uses: docker/login-action@v1
+      #   with:
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
+      -
+        name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
           
       -
         name: Run GoReleaser
